<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
             android:baselineAligned="false"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:orientation="vertical">

  <ImageView
      android:id="@+id/ivCover"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center_horizontal"
      android:contentDescription="@null"
      android:src="@drawable/ic_background1"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:orientation="vertical"
      android:padding="@dimen/dimen_18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/edtFirstName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_weight="1"
          android:background="@drawable/drawable_bg"
          android:hint="@string/first_name"
          android:imeOptions="actionDone"
          android:inputType="text"
          android:maxLines="1"
          android:paddingBottom="15dp"
          android:paddingLeft="@dimen/dimen_8dp"
          android:paddingRight="@dimen/dimen_8dp"
          android:paddingTop="15dp"
          android:textColor="@android:color/black"
          android:textColorHint="@color/colorPrimaryDark"/>

      <EditText
          android:id="@+id/edtLastName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/drawable_bg"
          android:hint="@string/last_name"
          android:imeOptions="actionDone"
          android:inputType="text"
          android:maxLines="1"
          android:paddingBottom="15dp"
          android:paddingLeft="@dimen/dimen_8dp"
          android:paddingRight="@dimen/dimen_8dp"
          android:paddingTop="15dp"
          android:textColor="@android:color/black"
          android:textColorHint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:background="@drawable/drawable_bg"
        android:hint="@string/mobile_phone"
        android:imeOptions="actionDone"
        android:inputType="phone|number"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:paddingTop="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/linearBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:orientation="horizontal">

      <Button
          android:id="@+id/btnBack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen_4dp"
          android:layout_marginRight="@dimen/dimen_4dp"
          android:layout_weight="1"
          android:background="@drawable/selector_button"
          android:paddingLeft="@dimen/dimen_18dp"
          android:paddingRight="@dimen/dimen_18dp"
          android:text="Back"
          android:textAllCaps="false"
          android:textColor="@android:color/white"
          android:textSize="@dimen/size_18sp"/>

      <Button
          android:id="@+id/btnCreateNew"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/dimen_8dp"
          android:layout_marginStart="@dimen/dimen_8dp"
          android:layout_weight="1"
          android:background="@drawable/selector_button"
          android:clickable="false"
          android:paddingLeft="@dimen/dimen_18dp"
          android:paddingRight="@dimen/dimen_18dp"
          android:text="@string/register_service"
          android:textAllCaps="false"
          android:textColor="@android:color/white"
          android:textSize="@dimen/size_18sp"/>
    </LinearLayout>
  </LinearLayout>
</FrameLayout>
